// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates correct class names 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    \\"::before\\": {
      opacity: \\"cm5vf3y\\"
    }
  },
  hidden: {
    \\"::before\\": {
      opacity: \\"cqagcww\\"
    }
  }
};
\\"cqagcww \\";"
`;

exports[`generates correct class names 2`] = `".cm5vf3y::before{opacity:1}.cqagcww::before{opacity:0}"`;

exports[`supports at rules 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    \\"@media (max-width: 1000px)\\": {
      opacity: \\"ci6xust\\"
    }
  }
};
\\"ci6xust \\";"
`;

exports[`supports at rules 2`] = `"@media (max-width: 1000px){.ci6xust{opacity:1}}"`;

exports[`supports deep nesting 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    \\"@media (max-width: 1000px)\\": {
      \\":hover\\": {
        \\"::before\\": {
          opacity: \\"c1or01hk\\"
        }
      }
    }
  }
};
\\"c1or01hk \\";"
`;

exports[`supports deep nesting 2`] = `"@media (max-width: 1000px){.c1or01hk:hover::before{opacity:1}}"`;

exports[`supports nesting 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    \\"::before\\": {
      opacity: \\"cm5vf3y\\"
    }
  }
};
\\"cm5vf3y \\";"
`;

exports[`supports nesting 2`] = `".cm5vf3y::before{opacity:1}"`;

exports[`translates old pseudo element 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    \\"::before\\": {
      opacity: \\"cm5vf3y\\"
    },
    \\"::after\\": {
      opacity: \\"c1ud6rae\\"
    },
    \\"::first-letter\\": {
      opacity: \\"c1xtf9ff\\"
    },
    \\"::first-line\\": {
      opacity: \\"c9com6n\\"
    }
  }
};"
`;

exports[`translates old pseudo element 2`] = `".cm5vf3y::before{opacity:1}.c1ud6rae::after{opacity:1}.c1xtf9ff::first-letter{opacity:1}.c9com6n::first-line{opacity:1}"`;
